--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "require": {
     "php": ">= 5.4",
     "netresearch/jsonmapper": "^0.11.0",
-    "guzzlehttp/guzzle": "5.3.1"
+    "guzzlehttp/guzzle": "5.3.1|^6.3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
