--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "opensdks/omnikassa2-sdk",
+  "name": "rabobank/omnikassa/sdk",
   "description": "Rabobank OmniKassa SDK",
   "license": "proprietary",
   "minimum-stability": "dev",
   "require": {
     "php": ">= 5.4",
     "netresearch/jsonmapper": "^0.11.0",
-    "guzzlehttp/guzzle": "5.3.1|^6.3.0"
+    "guzzlehttp/guzzle": "5.3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
